# euchre-tui

./: Cargo.toml  LICENSE  README.md  makefile
.github/workflows/: publish-crate.yaml  rust-ci.yaml
assets/: mock-game-ui.txt  record.tape
docs/: changelog.md  roadmap.md
src/: app.rs  cli.rs  interface.rs  lib.rs  main.rs  structs.rs  tui.rs
src/engine/: card.rs  cards.rs  game.rs  mod.rs  player.rs  table.rs  team.rs
src/engine/table/: mod.rs  player.rs  table.rs  team.rs
src/game/: player.rs
src/interface/: components.rs  game_screen.rs  interface.rs  interface_callback.rs  mod.rs  setup_screen.rs  splash_screen.rs  traits.rs
src/interface/components/: ascii_text.rs  cards.rs  layouts.rs  mod.rs  popups.rs
src/interface/layouts/: game.rs  mod.rs
src/interface/screens/: game_screen.rs  mod.rs  setup_screen.rs  splash_screen.rs
src/table/: player.rs
