[package]
name = "euchre-tui"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["boldandbrad"]
description = "Play euchre in your terminal via a beautifully designed text-based interface!"
repository = "https://github.com/boldandbrad/euchre-tui"
license = "MIT"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
name_maker = "0.1.1"
rand = "0.8.5"
ratatui = "0.26.1"
tui-textarea = "0.4.0"

[[bin]]
name = "euchre"
path = "src/main.rs"
